--- a/style.css
+++ b/style.css
@@ -70,9 +70,18 @@ main {
   object-fit: cover;
 }
 
-.restarant-details {
+.restaurant-details {
   padding: 0.5rem;
   h2 {
     font-size: 1rem;
   }
+}
+
+.filter-btn {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-weight: 600;
+  border: 0.0625rem solid #aaa;
+  border-radius: 1rem;
+  background-color: #fff;
 }
